<resources>
    <string name="app_name">Aquarium</string>
    <string name="registar">Registar</string>
    <string name="entrar">Entrar</string>
    <string name="bem_vindo">Bem-Vindo</string>
    <string name="email">Email</string>
    <string name="palavra_passe">Palavra-passe</string>
    <string name="esqueceu_se_da_palavra_passe">Esqueceu-se da palavra-passe?</string>
    <string name="registo">Registo</string>
    <string name="nome">Nome</string>
    <string name="j_tem_uma_conta_iniciar_sessao">Já tem uma conta? Iniciar sessão</string>
    <string name="inicio">Inicio</string>
    <string name="definicoes">Definições</string>
    <string name="sair">Sair</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="paginainicial">Página Inicial</string>
    <string name="temp">Temperatura:</string>
    <string name="luz">Luz:</string>
    <string name="tpa">Tpa:</string>
    <string name="ph">pH:</string>
    <string name="definicoes_luz">Definições de Luz</string>
    <string name="definicoes_de_luz">Definições de Luz</string>
    <string name="definicoes_de_tpa">Definições de TPA</string>
    <string name="enviar">Enviar</string>
    <string name="intensidade">Intensidade</string>
    <string name="cores">Cores</string>
    <string name="Niveis">Níveis</string>
    <string name="LuzAuto">Luz Automatica</string>
    <string name="DefinicoesTPA">Definições TPA</string>
    <string name="Max">Máximo</string>
    <string name="IniciarTPA">Iniciar TPA</string>
    <string name="definir">definir</string>
    <string name="defini_es_de_temperatura">Definições de Temperatura</string>
    <string name="dias">Dias</string>
</resources>
