<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home_white_24dp">

    </item>
    <item
        android:id="@+id/settings_light"
        android:title="@string/definicoes_de_luz"
        android:icon="@drawable/ic_wb_incandescent_white_24dp">

    </item>
    <item
        android:id="@+id/settings_tpa"
        android:title="@string/definicoes_de_tpa"
        android:icon="@drawable/ic_date_range_white_24dp">
    </item>
    <item
        android:id="@+id/settings_temp"
        android:title="@string/defini_es_de_temperatura"
        android:icon="@drawable/ic_whatshot_white_24dp">
    </item>
    <item
        android:id="@+id/sair"
        android:title="@string/sair"
        android:icon="@drawable/ic_exit_to_app_white_24dp">
    </item>
</group>
</menu>