<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nightinicio"
    android:orientation="vertical"
    tools:context=".InicioActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/paginainicial" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_whatshot_white_24dp"
                android:onClick="onClickTemp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_horizontal"
                    android:text="@string/temp"
                    android:textColor="#fff"
                    android:layout_marginRight="10dp"
                    android:textSize="20dp" />
                <TextView
                    android:id="@+id/tempvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/gotham"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="0.1dp"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_opacity_white_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/ph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_horizontal"
                    android:text="@string/ph"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/phvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/gotham"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="0.1dp"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_wb_incandescent_white_24dp"
                android:onClick="onClickIluminacao"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/luz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_horizontal"
                    android:text="@string/luz"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/luzvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/gotham"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="0.1dp"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_date_range_white_24dp"
                android:onClick="onClickTpa"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_horizontal"
                    android:text="@string/tpa"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/tpavalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/gotham"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>