<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nightinicio"
    android:orientation="vertical"
    tools:context=".definicoes_luzActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/definicoes_luz" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_brightness_6_black_24dp"
            android:contentDescription="@string/intensidade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/gotham"
                android:gravity="center_horizontal"
                android:text="@string/intensidade"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/Brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:max="100"
            android:thumbTint="@color/colorRadioWhite"
            android:backgroundTint="@color/colorRadioWhite">
        </SeekBar>

        <TextView
            android:id="@+id/txt_intensidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham"
            android:gravity="center_horizontal"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_color_lens_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/gotham"
                android:gravity="center_horizontal"
                android:text="@string/cores"
                android:textColor="#fff"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:buttonTint="@color/colorRadioRed"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:onClick="RadioColorRed"
                    />

                <RadioButton
                    android:id="@+id/radio_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/colorRadioGreen"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:onClick="RadioColorGreen"/>

                <RadioButton
                    android:id="@+id/radio_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/colorRadioBlue"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:onClick="RadioColorBlue"/>

                <RadioButton
                    android:id="@+id/radio_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="@color/colorRadioWhite"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:onClick="RadioColorWhite"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/gotham"
                android:gravity="center_horizontal"
                android:text="@string/Niveis"
                android:textColor="#fff"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/level1"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_wb_incandescent_white_24dp" />

            <ImageView
                android:id="@+id/level2"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_wb_incandescent_white_24dp" />

            <ImageView
                android:id="@+id/level3"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_wb_incandescent_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/lightAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorRadioWhite">

            </androidx.appcompat.widget.AppCompatCheckBox>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/gotham"
                android:gravity="center_horizontal"
                android:text="@string/LuzAuto"
                android:textColor="#fff"
                android:textSize="20dp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_wb_sunny_black_24dp" />

        </LinearLayout>

    </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>